# flip_clock-rs

./: .gitignore  COMPILING.md  Cargo.toml  Cross.toml  Justfile  LICENSE  README.md  build.rs  build_linux.sh  build_mac.sh  build_windows.bat
.cargo/: config.toml
rust_flip-rs/: Cargo.toml  build.ps1
rust_flip-rs/src/: main.rs
rust_flip_clock/: Cargo.toml  build.ps1
rust_flip_clock/src/: main.rs
src/: config.rs  main.rs
