[package]
name = "rust_flip-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4"
directories = "6.0.0"
macroquad = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "windef"] }

[dev-dependencies]
tempfile = "3.23.0"
